--- a/index.html
+++ b/index.html
@@ -1,75 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Important Question 💘</title>
-    <style>
-        body {
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-            font-family: 'Comic Sans MS', cursive, sans-serif;
-            text-align: center;
-        }
+<meta charset="UTF-8">
+<title>Important Question 💘</title>
 
-        .box {
-            background: white;
-            padding: 40px;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-        }
+<style>
+    body {
+        height: 100vh;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+        font-family: 'Comic Sans MS', cursive, sans-serif;
+        overflow: hidden;
+    }
 
-        h1 {
-            margin-bottom: 20px;
-        }
+    .box {
+        background: white;
+        padding: 40px 60px;
+        border-radius: 25px;
+        box-shadow: 0 15px 40px rgba(0,0,0,0.25);
+        text-align: center;
+        position: relative;
+        z-index: 10;
+    }
 
-        button {
-            font-size: 20px;
-            padding: 12px 30px;
-            margin: 10px;
-            border-radius: 30px;
-            border: none;
-            cursor: pointer;
-            transition: all 0.2s ease;
-        }
+    h1 {
+        margin-bottom: 10px;
+    }
 
-        #yes {
-            background-color: #ff4d6d;
-            color: white;
-        }
+    p {
+        margin-bottom: 25px;
+    }
 
-        #no {
-            background-color: #adb5bd;
-            color: black;
-        }
-    </style>
+    button {
+        font-size: 20px;
+        padding: 14px 34px;
+        border-radius: 40px;
+        border: none;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        margin: 10px;
+    }
+
+    #yes {
+        background: #ff4d6d;
+        color: white;
+    }
+
+    #no {
+        background: #adb5bd;
+        color: black;
+        position: relative;
+    }
+
+    /* Confetti */
+    .confetti {
+        position: fixed;
+        width: 10px;
+        height: 10px;
+        background: red;
+        animation: fall 2s linear forwards;
+        z-index: 999;
+    }
+
+    @keyframes fall {
+        0% { transform: translateY(-100vh) rotate(0deg); }
+        100% { transform: translateY(100vh) rotate(720deg); }
+    }
+</style>
 </head>
+
 <body>
 
-<div class="box">
+<div class="box" id="box">
     <h1>Will you be my Valentine? 💕</h1>
     <p>(Warning: No wrong answers 😏)</p>
 
-    <button id="yes" onclick="sayYes()">Yes ❤️</button>
-    <button id="no" onmouseover="turnIntoYes()">No 💔</button>
+    <button id="yes" onclick="finalYes()">Yes 💖</button>
+    <button id="no" onmouseover="growNo()" onclick="finalYes()">No 💔</button>
 </div>
 
 <script>
-    function turnIntoYes() {
+    let stage = 0;
+
+    const stages = [
+        { text: "Really?", scale: 1.2 },
+        { text: "Are you sure??", scale: 1.5 },
+        { text: "Oh my God, I'm flying 🚀", scale: 2.2 }
+    ];
+
+    function growNo() {
         const noBtn = document.getElementById("no");
-        noBtn.innerHTML = "Yes ❤️";
-        noBtn.style.backgroundColor = "#ff4d6d";
-        noBtn.style.color = "white";
+
+        if (stage < stages.length) {
+            noBtn.innerText = stages[stage].text;
+            noBtn.style.transform = `scale(${stages[stage].scale})`;
+            noBtn.style.background = "#ff4d6d";
+            noBtn.style.color = "white";
+            stage++;
+        }
     }
 
-    function sayYes() {
-        document.querySelector(".box").innerHTML = `
-            <h1>YAYYYY!!! 🎉💖</h1>
-            <p>I knew it 😎</p>
-            <p>You just made my Valentine’s Day ❤️</p>
+    function finalYes() {
+        document.getElementById("box").innerHTML = `
+            <h1>YAAAAAY 💖🎉</h1>
+            <p>I knew it 😌</p>
+            <p>You’re officially my Valentine 💘</p>
         `;
+        popConfetti();
+    }
+
+    function popConfetti() {
+        for (let i = 0; i < 120; i++) {
+            const confetti = document.createElement("div");
+            confetti.className = "confetti";
+            confetti.style.left = Math.random() * 100 + "vw";
+            confetti.style.background =
+                ["#ff4d6d", "#ffb703", "#ffd6e0", "#ff006e"][Math.floor(Math.random() * 4)];
+            confetti.style.animationDuration = Math.random() * 2 + 1 + "s";
+            document.body.appendChild(confetti);
+
+            setTimeout(() => confetti.remove(), 3000);
+        }
     }
 </script>
 
