--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: linear-gradient(135deg, #a2d2ff, #cdb4db);
+
+        /* Stitch background images */
+        background:
+            url("images/Stitch.jpg") no-repeat left 5% top 10%,
+            url("images/Stitch.jpg") no-repeat right 5% bottom 15%,
+            url("images/Stitch.jpg") no-repeat right 15% top 10%,
+            linear-gradient(135deg, #a2d2ff, #cdb4db);
+
+        background-size: 120px, 140px, 100px, cover;
         font-family: 'Comic Sans MS', 'Trebuchet MS', cursive;
         overflow: hidden;
     }
@@ -42,7 +50,7 @@
         border-radius: 45px;
         border: none;
         cursor: pointer;
-        transition: all 0.35s ease;
+        transition: transform 0.35s ease;
         margin: 10px;
         font-weight: bold;
     }
@@ -77,14 +85,17 @@
 
 <div class="box" id="box">
     <h1>Will you be my Valentine? 💙</h1>
-    <p>(Warning: Clicking NO has side effects 😌)</p>
+    <p>(Hovering NO is very dangerous 😌)</p>
 
     <button id="yes" onclick="finalYes()">Yes 💙</button>
-    <button id="no" onclick="growNo()">No 😏</button>
+    <button id="no"
+        onmouseover="hoverNo()"
+        onclick="growNo()">No 😏</button>
 </div>
 
 <script>
     let stage = 0;
+    let hovered = false;
 
     const stages = [
         { text: "Really?", scale: 1.3 },
@@ -92,14 +103,24 @@
         { text: "Oh my God, I'm flying 🚀", scale: 2.4 }
     ];
 
+    // Hover: ONLY text changes to Yes
+    function hoverNo() {
+        const noBtn = document.getElementById("no");
+        if (!hovered) {
+            noBtn.innerText = "Yes 💙";
+            noBtn.style.background = "#3b82f6";
+            noBtn.style.color = "white";
+            hovered = true;
+        }
+    }
+
+    // Click: size + drama
     function growNo() {
         const noBtn = document.getElementById("no");
 
         if (stage < stages.length) {
             noBtn.innerText = stages[stage].text;
             noBtn.style.transform = `scale(${stages[stage].scale})`;
-            noBtn.style.background = "#2563eb";
-            noBtn.style.color = "white";
             stage++;
         } else {
             finalYes();
@@ -114,14 +135,14 @@
                 indha Stitch-um en heart-um melt aaidum 💙🫠
             </p>
             <p style="font-size:18px;">
-                Valentine illa… nee dhaan en whole package 😌
+                Valentine illa… nee dhaan en whole universe 😌🌍
             </p>
         `;
         popConfetti();
     }
 
     function popConfetti() {
-        for (let i = 0; i < 140; i++) {
+        for (let i = 0; i < 150; i++) {
             const confetti = document.createElement("div");
             confetti.className = "confetti";
             confetti.style.left = Math.random() * 100 + "vw";
