--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
-
-        /* ONLY ONE Stitch image on the LEFT, ZOOMED */
         background:
             url("images/Stitch.jpg") no-repeat left 3% center,
             linear-gradient(135deg, #a2d2ff, #cdb4db);
-
         background-size: 260px, cover;
         font-family: 'Comic Sans MS', 'Trebuchet MS', cursive;
         overflow: hidden;
@@ -30,6 +27,7 @@
         text-align: center;
         position: relative;
         z-index: 10;
+        max-width: 520px;
     }
 
     h1 {
@@ -38,12 +36,12 @@
     }
 
     p {
-        margin-bottom: 25px;
+        margin-bottom: 18px;
         color: #334155;
     }
 
     button {
-        font-size: 20px;
+        font-size: 18px;
         padding: 14px 36px;
         border-radius: 45px;
         border: none;
@@ -61,6 +59,48 @@
     #no {
         background: #93c5fd;
         color: #0f172a;
+    }
+
+    #menuBtn {
+        background: #1d4ed8;
+        color: white;
+        margin-top: 25px;
+    }
+
+    .menu {
+        background: #eef4ff;
+        border-radius: 20px;
+        padding: 25px;
+        margin-top: 20px;
+        text-align: left;
+        animation: fadeIn 0.6s ease;
+    }
+
+    .menu h2 {
+        text-align: center;
+        color: #1d4ed8;
+    }
+
+    .menu ul {
+        list-style: none;
+        padding: 0;
+    }
+
+    .menu li {
+        margin: 8px 0;
+        font-size: 17px;
+    }
+
+    .footer {
+        margin-top: 15px;
+        text-align: center;
+        font-size: 15px;
+        color: #475569;
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
     }
 
     /* Confetti */
@@ -86,9 +126,7 @@
     <p>(Hovering NO is very dangerous 😌)</p>
 
     <button id="yes" onclick="finalYes()">Yes 💙</button>
-    <button id="no"
-        onmouseover="hoverNo()"
-        onclick="growNo()">No 😏</button>
+    <button id="no" onmouseover="hoverNo()" onclick="growNo()">No 😏</button>
 </div>
 
 <script>
@@ -101,7 +139,6 @@
         { text: "Oh my God, I'm flying 🚀", scale: 2.4 }
     ];
 
-    // Hover: ONLY text changes
     function hoverNo() {
         const noBtn = document.getElementById("no");
         if (!hovered) {
@@ -112,10 +149,8 @@
         }
     }
 
-    // Click: size changes
     function growNo() {
         const noBtn = document.getElementById("no");
-
         if (stage < stages.length) {
             noBtn.innerText = stages[stage].text;
             noBtn.style.transform = `scale(${stages[stage].scale})`;
@@ -127,20 +162,42 @@
 
     function finalYes() {
         document.getElementById("box").innerHTML = `
-            <h1 style="font-size:38px;">Aiyo va di en thangoooooo 💙🥹</h1>
-            <p style="font-size:20px; margin-top:15px;">
+            <h1 style="font-size:36px;">Aiyo va di en thangoooooo 💙🥹</h1>
+            <p style="font-size:19px;">
                 Nee smile pannale podhum…  
                 indha Stitch-um en heart-um melt aaidum 💙🫠
             </p>
             <p style="font-size:18px;">
                 Valentine illa… nee dhaan en whole universe 😌🌍
             </p>
+
+            <button id="menuBtn" onclick="showMenu()">Food Menu 🍽️</button>
+
+            <div id="menuArea"></div>
         `;
         popConfetti();
     }
 
+    function showMenu() {
+        document.getElementById("menuArea").innerHTML = `
+            <div class="menu">
+                <h2>Today’s Special 💙</h2>
+                <ul>
+                    <li>🥗 Starters — <b>Me</b></li>
+                    <li>🍝 Main Course — <b>Me</b></li>
+                    <li>🍰 Desserts — <b>Me</b></li>
+                    <li>☕ Beverages — <b>Me</b></li>
+                </ul>
+                <div class="footer">
+                    Sit back and relax. Everything is reserved 😌<br>
+                    <b>14/02/26 – 3:30 PM</b>
+                </div>
+            </div>
+        `;
+    }
+
     function popConfetti() {
-        for (let i = 0; i < 150; i++) {
+        for (let i = 0; i < 120; i++) {
             const confetti = document.createElement("div");
             confetti.className = "confetti";
             confetti.style.left = Math.random() * 100 + "vw";
@@ -148,7 +205,6 @@
                 ["#3b82f6", "#60a5fa", "#93c5fd", "#1d4ed8"][Math.floor(Math.random() * 4)];
             confetti.style.animationDuration = Math.random() * 2 + 1.5 + "s";
             document.body.appendChild(confetti);
-
             setTimeout(() => confetti.remove(), 3500);
         }
     }
