--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     function showMenu() {
         document.getElementById("menuArea").innerHTML = `
             <div class="menu">
-                <h2>Today’s Special 💙</h2>
+                <h2>Chef's Special 💙</h2>
                 <ul>
                     <li>🥗 Starters — <b>Me</b></li>
                     <li>🍝 Main Course — <b>Me</b></li>
