--- a/index.html
+++ b/index.html
@@ -2,120 +2,45 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Important Question 💙</title>
+<title>Test NO Button Logic</title>
 
 <style>
-    body {
-        height: 100vh;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background:
-            url("images/Stitch.jpg") no-repeat left 3% center,
-            linear-gradient(135deg, #a2d2ff, #cdb4db);
-        background-size: 260px, cover;
-        font-family: 'Comic Sans MS', 'Trebuchet MS', cursive;
-        overflow: hidden;
-    }
+body {
+    height: 100vh;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(135deg, #a2d2ff, #cdb4db);
+    font-family: Comic Sans MS, cursive;
+}
 
-    .box {
-        background: #f8fbff;
-        padding: 45px 65px;
-        border-radius: 30px;
-        box-shadow: 0 18px 45px rgba(0,0,0,0.25);
-        text-align: center;
-        position: relative;
-        z-index: 10;
-        max-width: 520px;
-    }
+.box {
+    background: white;
+    padding: 40px 60px;
+    border-radius: 25px;
+    text-align: center;
+    box-shadow: 0 15px 40px rgba(0,0,0,.2);
+}
 
-    h1 {
-        margin-bottom: 10px;
-        color: #1d4ed8;
-    }
+button {
+    font-size: 20px;
+    padding: 14px 36px;
+    border-radius: 40px;
+    border: none;
+    cursor: pointer;
+    margin: 10px;
+    transition: transform 0.3s ease;
+}
 
-    p {
-        margin-bottom: 18px;
-        color: #334155;
-    }
+#yes {
+    background: #3b82f6;
+    color: white;
+}
 
-    button {
-        font-size: 18px;
-        padding: 14px 36px;
-        border-radius: 45px;
-        border: none;
-        cursor: pointer;
-        transition: transform 0.35s ease;
-        margin: 10px;
-        font-weight: bold;
-    }
-
-    #yes {
-        background: #3b82f6;
-        color: white;
-    }
-
-    #no {
-        background: #93c5fd;
-        color: #0f172a;
-    }
-
-    #menuBtn {
-        background: #1d4ed8;
-        color: white;
-        margin-top: 25px;
-    }
-
-    .menu {
-        background: #eef4ff;
-        border-radius: 20px;
-        padding: 25px;
-        margin-top: 20px;
-        text-align: left;
-        animation: fadeIn 0.6s ease;
-    }
-
-    .menu h2 {
-        text-align: center;
-        color: #1d4ed8;
-    }
-
-    .menu ul {
-        list-style: none;
-        padding: 0;
-    }
-
-    .menu li {
-        margin: 8px 0;
-        font-size: 17px;
-    }
-
-    .footer {
-        margin-top: 15px;
-        text-align: center;
-        font-size: 15px;
-        color: #475569;
-    }
-
-    @keyframes fadeIn {
-        from { opacity: 0; transform: translateY(10px); }
-        to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Confetti */
-    .confetti {
-        position: fixed;
-        width: 10px;
-        height: 10px;
-        animation: fall 2.5s linear forwards;
-        z-index: 999;
-    }
-
-    @keyframes fall {
-        0% { transform: translateY(-100vh) rotate(0deg); }
-        100% { transform: translateY(100vh) rotate(720deg); }
-    }
+#no {
+    background: #93c5fd;
+}
 </style>
 </head>
 
@@ -123,100 +48,57 @@
 
 <div class="box" id="box">
     <h1>Will you be my Valentine? 💙</h1>
-    <p>(Hovering NO is very dangerous 😌)</p>
 
     <button id="yes" onclick="finalYes()">Yes 💙</button>
-    <button id="no" onmouseover="hoverNo()" onclick="growNo()">No 😏</button>
+    <button id="no">No 😏</button>
 </div>
 
 <script>
-    let stage = 0;
+let stage = 0;
+const noBtn = document.getElementById("no");
 
-    const stages = [
-        { text: "Really?", scale: 1.3 },
-        { text: "Are you sure??", scale: 1.7 },
-        { text: "Oh my God, I'm flying 🚀", scale: 2.4 }
-    ];
+const stages = [
+    { text: "Really?", scale: 1.3 },
+    { text: "Are you sure??", scale: 1.7 },
+    { text: "Oh my God, I'm flying 🚀", scale: 2.3 }
+];
 
-    function hoverNo(isHover) {
-        const noBtn = document.getElementById("no");
-
-        // Hover ON → show Yes
-        if (isHover && stage === 0) {
-            noBtn.innerText = "Yes 💙";
-            noBtn.style.background = "#3b82f6";
-            noBtn.style.color = "white";
-        }
-
-        // Hover OFF → revert to No
-        if (!isHover && stage === 0) {
-            noBtn.innerText = "No 😏";
-            noBtn.style.background = "#93c5fd";
-            noBtn.style.color = "#0f172a";
-        }
+/* HOVER ON */
+noBtn.addEventListener("mouseenter", () => {
+    if (stage === 0) {
+        noBtn.textContent = "Yes 💙";
+        noBtn.style.background = "#3b82f6";
+        noBtn.style.color = "white";
     }
+});
 
-    function growNo() {
-        const noBtn = document.getElementById("no");
-
-        if (stage < stages.length) {
-            noBtn.innerText = stages[stage].text;
-            noBtn.style.transform = `scale(${stages[stage].scale})`;
-            stage++;
-        } else {
-            finalYes();
-        }
+/* HOVER OFF */
+noBtn.addEventListener("mouseleave", () => {
+    if (stage === 0) {
+        noBtn.textContent = "No 😏";
+        noBtn.style.background = "#93c5fd";
+        noBtn.style.color = "black";
     }
+});
 
-    function finalYes() {
-        document.getElementById("box").innerHTML = `
-            <h1 style="font-size:36px;">Aiyo va di en thangoooooo 💙🥹</h1>
-            <p style="font-size:19px;">
-                Nee smile pannale podhum…  
-                indha Stitch-um en heart-um melt aaidum 💙🫠
-            </p>
-            <p style="font-size:18px;">
-                Valentine illa… nee dhaan en whole universe 😌🌍
-            </p>
-
-            <button id="menuBtn" onclick="showMenu()">Food Menu 🍽️</button>
-            <div id="menuArea"></div>
-        `;
-        popConfetti();
+/* CLICK */
+noBtn.addEventListener("click", () => {
+    if (stage < stages.length) {
+        noBtn.textContent = stages[stage].text;
+        noBtn.style.transform = `scale(${stages[stage].scale})`;
+        stage++;
+    } else {
+        finalYes();
     }
+});
 
-    function showMenu() {
-        document.getElementById("menuArea").innerHTML = `
-            <div class="menu">
-                <h2>Today’s Special 💙</h2>
-                <ul>
-                    <li>🥗 Starters — <b>Me</b></li>
-                    <li>🍝 Main Course — <b>Me</b></li>
-                    <li>🍰 Desserts — <b>Me</b></li>
-                    <li>☕ Beverages — <b>Me</b></li>
-                </ul>
-                <div class="footer">
-                    Sit back and relax. Everything is reserved 😌<br>
-                    <b>14/02/26 – 3:30 PM</b>
-                </div>
-            </div>
-        `;
-    }
-
-    function popConfetti() {
-        for (let i = 0; i < 120; i++) {
-            const confetti = document.createElement("div");
-            confetti.className = "confetti";
-            confetti.style.left = Math.random() * 100 + "vw";
-            confetti.style.background =
-                ["#3b82f6", "#60a5fa", "#93c5fd", "#1d4ed8"][Math.floor(Math.random() * 4)];
-            confetti.style.animationDuration = Math.random() * 2 + 1.5 + "s";
-            document.body.appendChild(confetti);
-            setTimeout(() => confetti.remove(), 3500);
-        }
-    }
+function finalYes() {
+    document.getElementById("box").innerHTML = `
+        <h1>Aiyo va di en thangoooooo 💙🥹</h1>
+        <p>Valentine illa… nee dhaan 😌</p>
+    `;
+}
 </script>
-
 
 </body>
 </html>
